--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -23,7 +23,7 @@ jobs:
           # branch should not be protected
           branch: 'CLATest'
           allowlist: stsrki,bot*
-          remote-repository-name: https://github.com/Megabit/CLA-Signature
+          remote-repository-name: CLA-Signatures
           
          #below are the optional inputs - If the optional inputs are not given, then default values will be taken
           #remote-organization-name: enter the remote organization name where the signatures should be stored (Default is storing the signatures in the same repository)
