--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/stale@v5.0.0
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: "This is an automated message reminding that this issue is expecting for the author's answer."
+        stale-issue-message: "This is an automated message reminding that this issue is expecting the author's answer."
         days-before-stale: 1
-        days-before-close: -1
+        days-before-close: 1
         only-labels: 'Status: Expecting Answer'
